--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-email/components": "^0.0.39",
     "ai": "^4.3.15",
     "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
@@ -25,11 +26,13 @@
     "lucide-react": "^0.510.0",
     "mongoose": "^8.14.2",
     "next": "15.3.2",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "openai": "^4.98.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
+    "resend": "^4.5.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "use-debounce": "^10.0.4",
